WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127985
[EFL][WK2] Unreviewed EFL WebKit2 build fix after
r163116
.
https://bugs.webkit.org/show_bug.cgi?id=127985
Summary
[EFL][WK2] Unreviewed EFL WebKit2 build fix after r163116.
Jinwoo Song
Reported
2014-01-30 23:04:03 PST
SSIA.
Attachments
Patch
(1.91 KB, patch)
2014-01-30 23:06 PST
,
Jinwoo Song
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Song
Comment 1
2014-01-30 23:06:58 PST
Created
attachment 222796
[details]
Patch
WebKit Commit Bot
Comment 2
2014-01-30 23:46:37 PST
Comment on
attachment 222796
[details]
Patch Clearing flags on attachment: 222796 Committed
r163164
: <
http://trac.webkit.org/changeset/163164
>
WebKit Commit Bot
Comment 3
2014-01-30 23:46:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug