[EFL][WK2] Unreviewed EFL WebKit2 build fix after r163116. https://bugs.webkit.org/show_bug.cgi?id=127985

Unreviewed EFL WebKit2 build fix.


* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::processDidExit):
* UIProcess/CoordinatedGraphics/WebView.h:


Canonical link: https://commits.webkit.org/145985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163164 268f45cc-cd09-0410-ab3c-d52691b4dbfc